--- a/src/app/alimentacion/crear-alimentacion/crear-alimentacion.component.html
+++ b/src/app/alimentacion/crear-alimentacion/crear-alimentacion.component.html
@@ -1,1 +1,3 @@
-<p>crear-alimentacion works!</p>
+<h2>Crear Género</h2>
+
+<app-formulario-alimentacion [errores]="errores" (onSubmit)="guardarCambios($event)"></app-formulario-alimentacion>
