--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -11,7 +11,7 @@
     <!-- <app-autorizado [rol]="'admin'"> -->
     <ng-container autorizado>
         <div>
-            <a mat-button routerLink="alimentos">Alimentos</a>
+            <a mat-button routerLink="alimentacion">Alimentación</a>
         </div>
         <div>
             <a mat-button routerLink="razas">Razas</a>
