--- a/src/app/alimentacion/indice-alimentacion/indice-alimentacion.component.html
+++ b/src/app/alimentacion/indice-alimentacion/indice-alimentacion.component.html
@@ -11,9 +11,13 @@
                 <th mat-header-cell *matHeaderCellDef>Id</th>
                 <td mat-cell *matCellDef="let element">{{ element.id }}</td>
             </ng-container>
-            <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+            <ng-container matColumnDef="descripcion">
+                <th mat-header-cell *matHeaderCellDef>Descripción</th>
+                <td mat-cell *matCellDef="let element">{{ element.descripcion }}</td>
+            </ng-container>
+            <ng-container matColumnDef="dosis">
+                <th mat-header-cell *matHeaderCellDef>Dosis</th>
+                <td mat-cell *matCellDef="let element">{{ element.dosis }}</td>
             </ng-container>
             <ng-container matColumnDef="acciones">
                 <th mat-header-cell *matHeaderCellDef>Acciones</th>
