--- a/src/app/utilidades/listado-generico/listado-generico.component.html
+++ b/src/app/utilidades/listado-generico/listado-generico.component.html
@@ -12,7 +12,7 @@
   <ng-content select="[vacio]"></ng-content>
 </span>
     <span *ngIf="!vacio.innerHTML.trim()">
-  <p>No hay películas para mostrar</p>
+  <p>No hay registros para mostrar</p>
 </span>
 </div>
 
