--- a/src/app/alimentacion/formulario-alimentacion/formulario-alimentacion.component.html
+++ b/src/app/alimentacion/formulario-alimentacion/formulario-alimentacion.component.html
@@ -2,9 +2,14 @@
 
 <form (submit)="guardarCambios()" [formGroup]="form">
     <mat-form-field appearance="outline">
-        <mat-label>Nombre*</mat-label>
-        <input formControlName="nombre" matInput />
+        <mat-label>Descripción*</mat-label>
+        <input formControlName="descripcion" matInput />
         <mat-error *ngIf="form.invalid">{{ obtenerErrorCampoDescripcion() }}</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+        <mat-label>Dosis*</mat-label>
+        <input formControlName="dosis" matInput />
+        <mat-error *ngIf="form.invalid">{{ obtenerErrorCampoDosis() }}</mat-error>
     </mat-form-field>
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">
