--- a/src/app/alimentacion/crear-alimentacion/crear-alimentacion.component.html
+++ b/src/app/alimentacion/crear-alimentacion/crear-alimentacion.component.html
@@ -1,3 +1,3 @@
 <h2>Crear Alimentación</h2>
 
-<app-formulario-alimentacion [errores]="errores" (onSubmit)="guardarCambios($event)"></app-formulario-alimentacion>
+<app-formulario-alimentacion [errores]="errores" (OnSubmit)="guardarCambios($event)"></app-formulario-alimentacion>
