--- a/src/app/alimentacion/indice-alimentacion/indice-alimentacion.component.html
+++ b/src/app/alimentacion/indice-alimentacion/indice-alimentacion.component.html
@@ -22,7 +22,7 @@
             <ng-container matColumnDef="acciones">
                 <th mat-header-cell *matHeaderCellDef>Acciones</th>
                 <td mat-cell *matCellDef="let element">
-                    <a routerLink="/generos/editar/{{ element.id }}" mat-flat-button color="primary">Editar</a>
+                    <a routerLink="/alimentacion/editar/{{ element.id }}" mat-flat-button color="primary">Editar</a>
                     <button mat-flat-button color="warn" [swal]="{title: 'Confirmación',
           text: '¿Está seguro que desea borrar el registro?',
           showCancelButton: true}" (confirm)="borrar(element.id)">Borrar</button>
