--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -5,7 +5,7 @@
     </a>
   </span>
     <div>
-        <a mat-button routerLink="reporte/porcinos">
+        <a mat-button routerLink="porcinos/reporte">
             <mat-icon>search</mat-icon>Reporte Porcinos</a>
     </div>
     <!-- <app-autorizado [rol]="'admin'"> -->
